Small rebase tidyup + cleanup

--- a/viewer_worker.html
+++ b/viewer_worker.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Simple pdf.js page viewer worker</title>
+        <title>Simple pdf.js page worker viewer</title>
         <script type="text/javascript" src="worker_client.js"></script>
 <script>
 
