add Intel ISA doc as load test, and make harness resilient to bad PDF loads

--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -63,7 +63,14 @@ function nextTask() {
     if (r.readyState == 4) {
       var data = r.mozResponseArrayBuffer || r.mozResponse ||
                  r.responseArrayBuffer || r.response;
-      pdfDoc = new PDFDoc(new Stream(data));
+
+      try {
+        pdfDoc = new PDFDoc(new Stream(data));
+      } catch(e) {
+        pdfDoc.numPages = 1;
+        failure = 'load PDF doc: '+ e.toString();
+      }
+
       currentTask.pageNum = 1, nextPage();
     }    
   };
