--- a/multi_page_viewer.html
+++ b/multi_page_viewer.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="multi_page_viewer.css" type="text/css" media="screen"/>
 <script type="text/javascript" src="pdf.js"></script>
 <script type="text/javascript" src="fonts.js"></script>
+<script type="text/javascript" src="crypto.js"></script>
 <script type="text/javascript" src="glyphlist.js"></script>
 <script type="text/javascript" src="multi_page_viewer.js"></script>
 </head>
