Added experimental slide-out sidebar with page thumbnails.

--- a/multi_page_viewer.html
+++ b/multi_page_viewer.html
@@ -40,13 +40,16 @@
       <span class="label">Open File</span>
     </span>
   </div>
-  <!--<div id="sidebar">
-    <div id="sidebarScrollView">
-      <div id="sidebarContentView">
-        
+  
+  <!-- EXPERIMENTAL: Slide-out sidebar with page thumbnails (comment-out to disable) -->
+  <div id="sidebar">
+    <div id="sidebarBox">
+      <div id="sidebarScrollView">
+        <div id="sidebarContentView"></div>
       </div>
     </div>
-  </div>-->
+  </div>
+  
   <div id="viewer"></div>
 </body>
 </html>
