--- a/viewer_worker.html
+++ b/viewer_worker.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Simple pdf.js page worker viewer</title>
-        <script type="text/javascript" src="worker_client.js"></script>
+        <script type="text/javascript" src="worker/client.js"></script>
 <script>
 
 
