First pass on FontWorker

--- a/viewer_worker.html
+++ b/viewer_worker.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>Simple pdf.js page worker viewer</title>
+        <script type="text/javascript" src="fonts.js"></script>
+        <script type="text/javascript" src="glyphlist.js"></script>
+        <script type="text/javascript" src="pdf.js"></script>
         <script type="text/javascript" src="worker/client.js"></script>
 <script>
 
