--- a/viewer.html
+++ b/viewer.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="fonts.js"></script>
         <script type="text/javascript" src="crypto.js"></script>
         <script type="text/javascript" src="glyphlist.js"></script>
+        <script type="text/javascript" src="imagestreams.js"></script>
   </head>
 
   <body onload="load();">
