Add a make server target, fix paths to scripts.

--- a/web/multi_page_viewer.html
+++ b/web/multi_page_viewer.html
@@ -4,10 +4,10 @@
 <title>pdf.js Multi-Page Viewer</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
 <link rel="stylesheet" href="multi_page_viewer.css" type="text/css" media="screen"/>
-<script type="text/javascript" src="pdf.js"></script>
-<script type="text/javascript" src="fonts.js"></script>
-<script type="text/javascript" src="crypto.js"></script>
-<script type="text/javascript" src="glyphlist.js"></script>
+<script type="text/javascript" src="../pdf.js"></script>
+<script type="text/javascript" src="../fonts.js"></script>
+<script type="text/javascript" src="../crypto.js"></script>
+<script type="text/javascript" src="../glyphlist.js"></script>
 <script type="text/javascript" src="multi_page_viewer.js"></script>
 </head>
 <body>
