--- a/web/viewer.html
+++ b/web/viewer.html
@@ -4,7 +4,7 @@
         <title>Simple pdf.js page viewer</title>
         <link rel="stylesheet" href="viewer.css"></link>
 
-        <!-- <script type="text/javascript" src="compatibility.js"></script> -->
+        <script type="text/javascript" src="compatibility.js"></script>
         <script type="text/javascript" src="viewer.js"></script>
         <script type="text/javascript" src="../pdf.js"></script>
         <script type="text/javascript" src="../fonts.js"></script>
