--- a/web/multi_page_viewer.html
+++ b/web/multi_page_viewer.html
@@ -35,7 +35,7 @@
       </select>
       <span class="label">Zoom</span>
     </span>
-    <span class="control">
+    <span class="control" id="fileWrapper">
       <span id="openFileButton"></span>
       <input type="file" id="fileInput"/>
       <span class="label">Open File</span>
