Support font with characters below 0x20 declared in format 1 cmap and be more general about the TrueType rewritting cases

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="viewer.js"></script>
         <script type="text/javascript" src="../pdf.js"></script>
         <script type="text/javascript" src="../fonts.js"></script>
+        <script type="text/javascript" src="../utils/fonts_utils.js"></script>
         <script type="text/javascript" src="../crypto.js"></script>
         <script type="text/javascript" src="../glyphlist.js"></script>
   </head>
