added include to fonts_util.js

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="../fonts.js"></script>
         <script type="text/javascript" src="../crypto.js"></script>
         <script type="text/javascript" src="../glyphlist.js"></script>
-        <script type="text/javascript" src="../utils/fonts_util.js"></script>
+        <script type="text/javascript" src="../utils/fonts_utils.js"></script>
   </head>
 
   <body onload="load();">
