--- a/web/viewer.html
+++ b/web/viewer.html
@@ -12,22 +12,54 @@
         <script type="text/javascript" src="../glyphlist.js"></script>
   </head>
 
-  <body onload="load();">
+  <body>
     <div id="controls">
-    <input type="file" style="float: right; margin: auto 32px;" onChange="load(this.value.toString());"></input>
-    <!-- This only opens supported PDFs from the source path...
-      -- Can we use JSONP to overcome the same-origin restrictions? -->
-      <button onclick="prevPage();">Previous</button>
-      <button onclick="nextPage();">Next</button>
-      <input type="text" id="pageNumber" onchange="gotoPage(this.value);"
-             value="1" size="4"></input>
+      <button id="previous" onclick="PDFView.page--;">
+        <img src="images/go-up.svg" align="top" height="32"/>
+        Previous
+      </button>
+
+      <button id="next" onclick="PDFView.page++;">
+        <img src="images/go-down.svg" align="top" height="32"/>
+        Next
+      </button>
+
+      <div class="separator"></div>
+
+      <input type="text" id="pageNumber" onchange="PDFView.page = this.value;" value="1" size="4"></input>
+
+      <span>/</span>
       <span id="numPages">--</span>
-      <span id="info"></span>
+
+      <div class="separator"></div>
+
+      <select id="scaleSelect" onchange="PDFView.scale = parseInt(this.value);">
+        <option value="50">50%</option>
+        <option value="75">75%</option>
+        <option value="100">100%</option>
+        <option value="125">125%</option>
+        <option value="150" selected="selected"><p>150%</p></option>
+        <option value="200">200%</option>
+      </select>
+
+      <div class="separator"></div>
+
+      <input id="fileInput" type="file"></input>
+
+      <div class="separator"></div>
+
+      <span id="info">--</span>
     </div>
 
-    <div id="viewer">
-      <canvas id="canvas"></canvas>
+    <div id="sidebar">
+      <div id="sidebarBox">
+        <div id="sidebarScrollView">
+          <div id="sidebarView"></div>
+        </div>
+     </div>
     </div>
+
+    <div id="viewer"></div>
   </body>
 </html>
 
