Use Tango Public Domain icons and add some small tweaks to viewer.js

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -44,6 +44,13 @@
 
       <div class="separator"></div>
 
+      <button id="print" onclick="window.print();">
+        <img src="images/document-print.svg" align="top" height="32"/>
+        Print
+      </button>
+
+      <div class="separator"></div>
+
       <input id="fileInput" type="file"></input>
 
       <div class="separator"></div>
