Added jpeg library to decode cmyk jpegs

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -7,6 +7,8 @@
         <script type="text/javascript" src="compatibility.js"></script>
         <script type="text/javascript" src="viewer.js"></script>
         <script type="text/javascript" src="../pdf.js"></script>
+        <script type="text/javascript" src="../jpg.js"></script>
+        <script type="text/javascript" src="../worker.js"></script>
         <script type="text/javascript" src="../fonts.js"></script>
         <script type="text/javascript" src="../crypto.js"></script>
         <script type="text/javascript" src="../glyphlist.js"></script>
