Switching to the document outline view if the document structure is present

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -56,6 +56,17 @@
         <div id="sidebarScrollView">
           <div id="sidebarView"></div>
         </div>
+        <div id="outlineScrollView" style="display:none">
+          <div id="outlineView"></div>
+        </div>
+        <div id="sidebarControls">
+          <button id="thumbsSwitch" onclick="PDFView.switchSidebarView('thumbs')" data-selected>
+            <img src="images/nav-thumbs.svg" align="top" height="32" />
+          </button>
+          <button id="outlineSwitch" onclick="PDFView.switchSidebarView('outline')" disabled>
+            <img src="images/nav-outline.svg" align="top" height="32" />
+          </button>
+        </div>
      </div>
     </div>
 
