--- a/web/viewer.html
+++ b/web/viewer.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Simple pdf.js page viewer</title>
-        <link rel="stylesheet" href="viewer.css"></link>
+        <link rel="stylesheet" href="viewer.css"/>
 
         <script type="text/javascript" src="compatibility.js"></script>
         <script type="text/javascript" src="viewer.js"></script>
@@ -26,7 +26,7 @@
 
       <div class="separator"></div>
 
-      <input type="text" id="pageNumber" onchange="PDFView.page = this.value;" value="1" size="4"></input>
+      <input type="text" id="pageNumber" onchange="PDFView.page = this.value;" value="1" size="4"/>
 
       <span>/</span>
       <span id="numPages">--</span>
@@ -38,7 +38,7 @@
         <option value="75">75%</option>
         <option value="100">100%</option>
         <option value="125">125%</option>
-        <option value="150" selected="selected"><p>150%</p></option>
+        <option value="150" selected="selected">150%</option>
         <option value="200">200%</option>
       </select>
 
@@ -51,7 +51,7 @@
 
       <div class="separator"></div>
 
-      <input id="fileInput" type="file"></input>
+      <input id="fileInput" type="file"/>
 
       <div class="separator"></div>
 
