Zoom In/Out buttons

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -45,6 +45,9 @@
         <option id="pageFitOption" value="page-fit">Page Fit</option>
       </select>
 
+      <button id="zoomOut" onclick="PDFView.zoomOut();" title="Zoom Out">&ndash;</button>
+      <button id="zoomIn" onclick="PDFView.zoomIn();" title="Zoom In">+</button>
+
       <div class="separator"></div>
 
       <button id="print" onclick="window.print();">
