--- a/web/viewer.html
+++ b/web/viewer.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="../fonts.js"></script>
         <script type="text/javascript" src="../crypto.js"></script>
         <script type="text/javascript" src="../glyphlist.js"></script>
+        <script type="text/javascript" src="../worker.js"></script>
   </head>
 
   <body>
