Refactor to execute IR on main thead by posting messages to itself

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="../glyphlist.js"></script>
         <script type="text/javascript" src="../worker.js"></script>
         <script type="text/javascript" src="../worker/message_handler.js"></script>
+        <script type="text/javascript" src="../worker/handler.js"></script>
   </head>
 
   <body>
