--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -7,6 +7,9 @@
   <script type="text/javascript" src="/crypto.js"></script>
   <script type="text/javascript" src="/glyphlist.js"></script>
   <script type="text/javascript" src="driver.js"></script>
+  <script type="text/javascript" src="../worker.js"></script>
+  <script type="text/javascript" src="../worker/message_handler.js"></script>
+  <script type="text/javascript" src="../worker/handler.js"></script>
 </head>
 
 <body onload="load();">
