--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="/fonts.js"></script>
   <script type="text/javascript" src="/crypto.js"></script>
   <script type="text/javascript" src="/glyphlist.js"></script>
+  <script type="text/javascript" src="/metrics.js"></script>
   <script type="text/javascript" src="driver.js"></script>
 </head>
 
