Add support for Type1C advanced charsets

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -11,6 +11,7 @@
         <script type="text/javascript" src="../crypto.js"></script>
         <script type="text/javascript" src="../glyphlist.js"></script>
         <script type="text/javascript" src="../metrics.js"></script>
+        <script type="text/javascript" src="../charsets.js"></script>
   </head>
 
   <body>
