--- a/web/viewer.html
+++ b/web/viewer.html
@@ -13,7 +13,8 @@
         <script type="text/javascript" src="../metrics.js"></script>
         <script type="text/javascript" src="../worker.js"></script>
         <script type="text/javascript" src="../worker/message_handler.js"></script>
-        <script type="text/javascript" src="../worker/handler.js"></script>
+        <script type="text/javascript" src="../worker/processor_handler.js"></script>
+        <script type="text/javascript" src="../worker/font_handler.js"></script>
   </head>
 
   <body>
