Removing introduced by the test run DOM elements

--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -14,6 +14,7 @@
 <body onload="load();">
   <pre style="width:800; height:800; overflow: scroll;"id="stdout"></pre>
   <p>Inflight requests: <span id="inFlightCount"></span></p>
+  <div id="content-end"><!-- cleanup() guard --></div>
 </body>
 
 </html>
