--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="/glyphlist.js"></script>
   <script type="text/javascript" src="/metrics.js"></script>
   <script type="text/javascript" src="/charsets.js"></script>
+  <script type="text/javascript" src="/cidmaps.js"></script>
   <script type="text/javascript" src="driver.js"></script>
 </head>
 
