--- a/web/viewer.html
+++ b/web/viewer.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="../glyphlist.js"></script>
         <script type="text/javascript" src="../metrics.js"></script>
         <script type="text/javascript" src="../charsets.js"></script>
+        <script type="text/javascript" src="../cidmaps.js"></script>
   </head>
 
   <body>
