Limiting scale 25..400 (ref #582); disable scale keyboard when toolbar is active (ref #579); set page number field as 'number'

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -28,7 +28,7 @@
 
       <div class="separator"></div>
 
-      <input type="text" id="pageNumber" onchange="PDFView.page = this.value;" value="1" size="4"/>
+      <input type="number" id="pageNumber" onchange="PDFView.page = this.value;" value="1" size="4" min="1" />
 
       <span>/</span>
       <span id="numPages">--</span>
