--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -1,21 +1,27 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>pdf.js test slave</title>
-  <style type="text/css"></style>
-  <script type="text/javascript" src="/pdf.js"></script>
-  <script type="text/javascript" src="/fonts.js"></script>
-  <script type="text/javascript" src="/crypto.js"></script>
-  <script type="text/javascript" src="/glyphlist.js"></script>
-  <script type="text/javascript" src="/metrics.js"></script>
-  <script type="text/javascript" src="/charsets.js"></script>
-  <script type="text/javascript" src="/cidmaps.js"></script>
-  <script type="text/javascript" src="driver.js"></script>
-</head>
+  <head>
+    <title>pdf.js test slave</title>
+    <style type="text/css"></style>
+    <script type="text/javascript" src="/pdf.js"></script>
+    <script type="text/javascript" src="/fonts.js"></script>
+    <script type="text/javascript" src="/crypto.js"></script>
+    <script type="text/javascript" src="/glyphlist.js"></script>
+    <script type="text/javascript" src="/metrics.js"></script>
+    <script type="text/javascript" src="/charsets.js"></script>
+    <script type="text/javascript" src="/cidmaps.js"></script>
+    <script type="text/javascript" src="driver.js"></script>
+  </head>
 
-<body onload="load();">
-  <pre style="width:800; height:800; overflow: scroll;"id="stdout"></pre>
-  <p>Inflight requests: <span id="inFlightCount"></span></p>
-  <div id="content-end"><!-- cleanup() guard --></div>
-</body>
+  <body>
+    <pre style="width:800px; height:800px; overflow:scroll;" id="stdout"></pre>
+    <p>Inflight requests: <span id="inFlightCount"></span></p>
+    <div id="content-end"></div>
 
+    <script type="text/javascript">
+      'use strict';
+      load();
+    </script>
+  </body>
 </html>
+
